compiled/microservices/users/10-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  namespace: users
spec:
  replicas: 3
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: 'myorg/users:latest'
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              port: 3000
              path: /
          livenessProbe:
            httpGet:
              port: 3000
              path: /
        - name: super-sidecar
          image: 'myorg/sidecar:v1.0.0'
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 2
