compiled/microservices/users/10-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
  namespace: users
spec:
  selector:
    app: users
  ports:
    - name: http
      targetPort: 3000
      port: 3000
